--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <div class="heading">
+        <div class="heading container">
             <h3>Outdoor <br> <span class="Adventure">Adventure</span></h3>
             <nav>
                 <ul>
@@ -48,10 +49,10 @@
     </div>
 
     <div class="explore">
-        <div class="container">
-            <div class="1">
+        <div class="section2 container">
+            <div class="one">
             </div>
-            <div class="2">
+            <div class="two">
             <h3>explore the world</h3>
             <span class="line"></span>
             <p>This is another section of image with content.I do it second time and it help me for know abou flex and backgraund image.There are some ruls in backgroun image and flex.Flex is better than float.</p>
@@ -83,16 +84,14 @@
         </div>
     </div>
 
-    <footer>
-        <div class="footermain">
+    <div class="footer ">
             <p>heregoes some text</p>
             <p>here goes some too</p>
             <p>and here too</p>
             <p>and here goes some logo</p>
             
-        </div>
         
-    </footer>
+    </div>
 
 
 </body>
